--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,4 +25,7 @@
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
+
+  <!-- JAVASCRIPT -->
+  <script src="/public/js/sidebartree.js"></script>
 </head>
