--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -16,14 +16,20 @@
       `layout: page` in the front-matter. See readme for usage.
     {% endcomment %}
 
-    {% assign pages_list = site.pages %}
-    {% for node in pages_list %}
-      {% if node.title != null %}
-        {% if node.layout == "page" %}
-          <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
-        {% endif %}
-      {% endif %}
-    {% endfor %}
+    <div id="sidebar_tree" />
+
+    <script type="text/javascript">
+        var tree = { add : addUrl };
+
+        {% assign pages_list = site.pages %}
+        {% for node in pages_list %}
+          {% if node.title != null and node.layout == "page" and node.published != false %}
+        tree.add('{{ node.url }}', '{{ node.title }}', {% if page.url == node.url %}true{% else %}false{% endif %});
+          {% endif %}
+        {% endfor %}
+
+        document.getElementById('sidebar_tree').innerHTML = printSidebar(tree, repeatString('&nbsp', 6));
+    </script>
 
     <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
     <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
