--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="/public/css/poole.css">
   <link rel="stylesheet" href="/public/css/syntax.css">
   <link rel="stylesheet" href="/public/css/lanyon.css">
+  <link rel="stylesheet" href="/public/css/pencil.css">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700|PT+Sans:400">
 
   <!-- Icons -->
@@ -27,5 +28,5 @@
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
 
   <!-- JAVASCRIPT -->
-  <script src="/public/js/sidebartree.js"></script>
+  <script src="/public/js/all.js"></script>
 </head>
