--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
       <div class="masthead">
         <div class="container">
           <label for="sidebar-checkbox" class="sidebar-toggle"></label>
+          <span class="ico pencil" onclick="goToProse('{{ site.github.repo }}', '{{ page.path }}')"></span>
 
           <h3 class="masthead-title">
             <a href="/" title="Home">{{ site.title }}</a>
