--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,7 +9,7 @@
   </div>
 
   <nav class="sidebar-nav">
-    <a class="sidebar-nav-item{% if page.title == "Home" %} active{% endif %}" href="/">Home</a>
+    <a class="sidebar-nav-item{% if page.title == "Home" %} active{% endif %}" href="/">Principal</a>
     <a class="sidebar-nav-item{% if page.title == "Blog" %} active{% endif %}" href="/blog/">Blog</a>
 
     {% comment %}
@@ -32,9 +32,7 @@
         document.getElementById('sidebar_tree').innerHTML = printSidebar(tree, repeatString('&nbsp', 6));
     </script>
 
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
-    <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
+    <a class="sidebar-nav-item" href="{{ site.github.repo }}">Repositório do site</a>
   </nav>
 
   <div class="sidebar-item">
