Adiciona site dos "hireables"

--- a/_includes/hireables.html
+++ b/_includes/hireables.html
@@ -1,8 +1,9 @@
-<table>
+<table id="hireables-table">
   <thead>
     <tr>
       <th>Gravatar</th>
       <th>Nome</th>
+      <th>Site/Blog</th>
       <th>Seguidores</th>
       <th>Seguindo</th>
     </tr>
