--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="/public/css/pencil.css">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700|PT+Sans:400">
   <link rel="stylesheet" href="/public/flexslider/flexslider.css">
-  <link rel="stylesheet" href="/public/css/flexslider.css">
+  <link rel="stylesheet" href="/public/css/all.css">
 
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/public/apple-touch-icon-144-precomposed.png">
@@ -32,5 +32,6 @@
   <!-- JAVASCRIPT -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script src="/public/flexslider/jquery.flexslider-min.js"></script>
+  <script src="/public/js/URI.js"></script>
   <script src="/public/js/all.js"></script>
 </head>
