--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,9 +22,33 @@
   <link rel="stylesheet" href="/public/flexslider/flexslider.css">
   <link rel="stylesheet" href="/public/css/all.css">
 
-  <!-- Icons -->
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/public/apple-touch-icon-144-precomposed.png">
-  <link rel="shortcut icon" href="/public/favicon.ico">
+  <!-- ****** faviconit.com favicons ****** -->
+  <!-- Basic favicons -->
+  <link rel="shortcut icon" sizes="16x16 32x32 48x48 64x64" href="/public/img/favicons/favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="/public/img/favicons/favicon.ico">
+  <!--[if IE]><link rel="shortcut icon" href="/public/img/favicons/favicon.ico"><![endif]-->
+  <!-- For Opera Speed Dial -->
+  <link rel="icon" type="image/png" sizes="195x195" href="/public/img/favicons/favicon-195.png">
+  <!-- For iPad with high-resolution Retina Display running iOS ≥ 7 -->
+  <link rel="apple-touch-icon" sizes="152x152" href="/public/img/favicons/favicon-152.png">
+  <!-- For iPad with high-resolution Retina Display running iOS ≤ 6 -->
+  <link rel="apple-touch-icon" sizes="144x144" href="/public/img/favicons/favicon-144.png">
+  <!-- For iPhone with high-resolution Retina Display running iOS ≥ 7 -->
+  <link rel="apple-touch-icon" sizes="120x120" href="/public/img/favicons/favicon-120.png">
+  <!-- For iPhone with high-resolution Retina Display running iOS ≤ 6 -->
+  <link rel="apple-touch-icon" sizes="114x114" href="/public/img/favicons/favicon-114.png">
+  <!-- For Google TV devices -->
+  <link rel="icon" type="image/png" sizes="96x96" href="/public/img/favicons/favicon-96.png">
+  <!-- For iPad Mini -->
+  <link rel="apple-touch-icon" sizes="76x76" href="/public/img/favicons/favicon-76.png">
+  <!-- For first- and second-generation iPad -->
+  <link rel="apple-touch-icon" sizes="72x72" href="/public/img/favicons/favicon-72.png">
+  <!-- For non-Retina iPhone, iPod Touch and Android 2.1+ devices -->
+  <link rel="apple-touch-icon" href="favicon-57.png">
+  <!-- Windows 8 Tiles -->
+  <meta name="msapplication-TileColor" content="#FFFFFF">
+  <meta name="msapplication-TileImage" content="/public/img/favicons/favicon-144.png">
+  <!-- ****** faviconit.com favicons ****** -->
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
