--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
         <div class="container">
           <label for="sidebar-checkbox" class="sidebar-toggle"></label>
           <span class="ico pencil" onclick="goToProse('{{ site.github.repo }}', '{{ page.path }}')"></span>
+          <span class="octicon-octoface" onclick="goToGitHub('{{ site.github.repo }}', '{{ page.path }}')"></span>
 
           <h3 class="masthead-title">
             <a href="/" title="Home">{{ site.title }}</a>
