--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,8 @@
   <link rel="stylesheet" href="/public/css/poole.css">
   <link rel="stylesheet" href="/public/css/syntax.css">
   <link rel="stylesheet" href="/public/css/lanyon.css">
-  <link rel="stylesheet" href="/public/css/pencil.css">
+  <link rel="stylesheet" href="/public/css/prose.css">
+  <link rel="stylesheet" href="/public/css/octicons.css">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700|PT+Sans:400">
   <link rel="stylesheet" href="/public/flexslider/flexslider.css">
   <link rel="stylesheet" href="/public/css/all.css">
